# 0G_OpenClaw_Hackathon

./: README.md  README.zh-CN.md
0g-storage-kv-local/: Cargo.toml  README.md  requirements.txt
0g-storage-kv-local/.github/actions/setup-rust/: action.yml
0g-storage-kv-local/.github/workflows/: rust.yml  tests.yml
0g-storage-kv-local/node/log_entry_sync/src/sync_manager/: mod.rs
0g-storage-kv-local/node/rpc/: Cargo.toml
0g-storage-kv-local/node/rpc/src/: config.rs  lib.rs
0g-storage-kv-local/node/rpc/src/kv_rpc_server/: impl.rs
0g-storage-kv-local/node/src/: log.rs
0g-storage-kv-local/node/src/client/: builder.rs
0g-storage-kv-local/node/src/config/: convert.rs  mod.rs
0g-storage-kv-local/node/storage_with_stream/: Cargo.toml
0g-storage-kv-local/node/storage_with_stream/src/store/: data_store.rs  flow_store.rs  mod.rs  store_manager.rs  tx_store.rs
0g-storage-kv-local/node/stream/: Cargo.toml
0g-storage-kv-local/node/stream/src/: config.rs
0g-storage-kv-local/node/stream/src/stream_manager/: mod.rs  stream_data_fetcher.rs  stream_replayer.rs
0g-storage-kv-local/run/: config_example.toml  config_testnet_turbo.toml
0g-storage-kv-local/tests/: Makefile  kv_data_fetcher_test.py  kv_download_skip_test.py  kv_iterator_test.py  kv_put_get_test.py  kv_recovery_test.py
0g-storage-kv-local/tests/config/: .env  cosmos-genesis.json
0g-storage-kv-local/tests/config/zgs/network/node0/: key
0g-storage-kv-local/tests/config/zgs/network/node1/: key
0g-storage-kv-local/tests/config/zgs/network/node2/: key
0g-storage-kv-local/tests/kv_test_framework/: kv_node.py  test_framework.py
0g-storage-kv-local/tests/kv_utility/: build_binary.py
0g-storage-kv-local/tests/test_framework/: blockchain_node.py  contract_proxy.py  test_framework.py  zg_node.py  zgs_node.py
0g-storage-kv-local/tests/utility/: build_binary.py  kv.py  run_all.py  utils.py
0g_openclaw/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
0g_openclaw/docs/: index.md
0g_openclaw/docs/.i18n/: zh-CN.tm.jsonl
0g_openclaw/docs/cli/: agents.md
0g_openclaw/docs/concepts/: agent.md
0g_openclaw/docs/gateway/: configuration-examples.md  configuration-reference.md
0g_openclaw/docs/ja-JP/: index.md
0g_openclaw/scripts/: install.ps1  install.sh
(+56 files in other folders)
