[workspace]

members = [
    "node",
    "node/stream",
    "node/log_entry_sync",
    "node/rpc",
    "node/kv_types",
    "node/storage_with_stream",
]
resolver = "2"

[patch.crates-io]
eth2_ssz = { path = "version-meld/eth2_ssz" }
enr = { path = "version-meld/enr" }
discv5 = { path = "version-meld/discv5" }

[workspace.dependencies]
append_merkle = { git = "https://github.com/0gfoundation/0g-storage-node.git", branch = "main" }
merkle_light = { git = "https://github.com/0gfoundation/0g-storage-node.git", branch = "main" }
merkle_tree = { git = "https://github.com/0gfoundation/0g-storage-node.git", branch = "main" }
shared_types = { git = "https://github.com/0gfoundation/0g-storage-node.git", branch = "main" }
task_executor = { git = "https://github.com/0gfoundation/0g-storage-node.git", branch = "main" }
storage = { git = "https://github.com/0gfoundation/0g-storage-node.git", branch = "main", package = "storage" }
contract-interface = { git = "https://github.com/0gfoundation/0g-storage-node.git", branch = "main" }
metrics = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "c4734e337c66d38e6396742cd5117b596e8d2603" }
