[package]
name = "stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
append_merkle = { workspace = true }
async-trait = "0.1.56"
ethereum-types = "0.14"
futures = "0.3.21"
shared_types = { workspace = true }
kv_types = { path = "../kv_types" }
task_executor = { workspace = true }
tokio = "1.19.2"
ethers = { version = "^2", features = ["ws"] }
storage_with_stream = { path = "../storage_with_stream" }
rpc = {path = "../rpc"}
zg-storage-client = { git = "https://github.com/0gfoundation/0g-storage-sdk-rust.git", branch = "main" }
contract-interface = { workspace = true }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tracing = "0.1.35"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
thiserror = "1.0.37"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }
